examples/test/testpolicy6266.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6266
  namespace: namespace40
spec:
  podSelector:
    matchLabels:
      key48: value32
      key45: value48
      key5: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value25
          key7: value38
      podSelector:
        matchLabels:
          key11: value23
          key24: value21
